--- a/content/themes/flaty-5/partials/footer/three-columns.hbs
+++ b/content/themes/flaty-5/partials/footer/three-columns.hbs
@@ -21,6 +21,10 @@
 		<div class="copyright">
 			Copyright &copy; 2015 <a href="/">{{@blog.title}}</a> All Rights Reserved.
 			<br/>
+			<a class="louagave-fb" href="https://www.facebook.com/profile.php?id=100006852198743&fref=ts">
+			Presented by Lou Agave.
+			</a>
+			<br/>
 			Proudly published with <a class="icon-ghost" href="http://ghost.org">Ghost</a>
 			<br/>
 			Created by <a class="daniel-caruso" href="http://daniel-caruso.com">© Daniel Caruso</a>
