--- a/content/themes/flaty-5/partials/header/style3.hbs
+++ b/content/themes/flaty-5/partials/header/style3.hbs
@@ -16,6 +16,9 @@
             </div>
         </div>
     </div>
+{{!--     	<div class="lou-agave">
+			<h1>Lou Agave Presents</h1>
+	    </div> --}}
     <div class="logo-area">
         <div class="container">
             <div class="row">
