--- a/content/themes/flaty-5/partials/sidebar/default.hbs
+++ b/content/themes/flaty-5/partials/sidebar/default.hbs
@@ -5,12 +5,12 @@
 {{>widget/instagram widget_title="Instagram Stream" user_name="longislandlou" api_token="518686459.9d1fadd.b2bb7107f2a745a78c991ddec9f0b161" api_clientid="9d1fadd22dc942e5a7c75f409fac0cc0" display="12" cols="3" show_follow_box="true"}}
 {{>widget/youtube widget_title="YouTube"}}
 <div class="all-ads">
-<h3 class="links">Links</h3>
+<!-- <h3 class="links">Links</h3> -->
 	<div class="widget tn"><a href="http://www.tequila.net/" target="_blank"><img src="http://tequilaofthemonth.com/wp-content/uploads/2014/02/tequila-net-logo.png" class="alignnone" width="350" height="60" /></a></div>
 	<div class="widget tequila-match"><a href="http://www.tequilamatchmaker.com/" target="_blank"><img src="http://tequilamatchmaker.com/images/logo.png" class="alignnone"/></a></div>
-	<div class="widget mr-latino"><a href="http://www.mrlatinomagazine.com/nyc/" target="_blank"><img src="https://pbs.twimg.com/profile_images/646471873/linkswithurl.jpg"/></a></div>
-
-<h3 class="ads">Advertisements</h3>
+	<div class="widget mr-latino"><a href="http://www.mrlatinomagazine.com/nyc/" target="_blank"><img src="http://www.mrlatinomagazine.com/nyc/images/ML_headers/nyc_headimage.jpg"/></a></div>
+<!-- 
+<h3 class="ads">Advertisements</h3> -->
 	<div class="allbuy"><a href="http://www.zeetequila.com/" target="_blank">
 	
 		<h2 class="buy it here">Buy Tequila Here!</h2>
@@ -18,13 +18,14 @@
 	<div class="widget zee-tequila"><img src="/assets/img/old-town-tequila-banner.jpg" class="zee"/></div>
 	</a>
 	</div>
-
-	<div class="widget fortaleza"><a href="http://www.tequilafortaleza.com/" target="_blank"><img src="http://static1.squarespace.com/static/53c76cc7e4b06ab65b2412ed/53edc08ce4b0b335a20d4a2a/53edc6b1e4b03190fb1ee91b/1408092470088/black-banner-fortaleza.jpg?format=300w"/></a></div>
-	<div class="widget casa-noble"><a href="http://www.casanoble.com/" target="_blank"><img src="https://libertylighthousegroup.files.wordpress.com/2013/09/casanoble-nyt-no1blanco.jpg"/></a></div>
-	<div class="widget g4"><a href="https://www.facebook.com/TequilaG4" target="_blank"><img src="https://scontent-atl1-1.xx.fbcdn.net/hphotos-xtf1/v/t1.0-9/10402402_671135862964999_7229663608499956765_n.jpg?oh=6bab57c9f0349af05e612e720306b3da&oe=5621DD0D"/></a></div>
-	<div class="widget t1"><a href="http://www.t1tequila.com/" target="_blank"><img src="https://pbs.twimg.com/profile_images/1934754276/T1Profile.jpg"/></a></div>
-	<div class="widget el-tesoro"><a href="http://www.eltesorotequila.com/" target="_blank"><img src="http://tressf.com/wp-content/uploads/2011/09/El-Tesoro-Logo.jpg"/></a></div>
-	<div class="widget villa-lobos"><a href="https://www.facebook.com/villalobostequila" target="_blank"><img src="https://pbs.twimg.com/profile_images/595660016784416768/FYL51BhX.jpg"/></a></div>
+	<div class="shrink-ads">
+		<div class="widget fortaleza"><a href="http://www.tequilafortaleza.com/" target="_blank"><img src="https://tequilasnob.files.wordpress.com/2010/06/fortaleza.gif"/></a></div>
+		<div class="widget casa-noble"><a href="http://www.casanoble.com/" target="_blank"><img src="https://libertylighthousegroup.files.wordpress.com/2013/09/casanoble-nyt-no1blanco.jpg"/></a></div>
+		<div class="widget g4"><a href="https://www.facebook.com/TequilaG4" target="_blank"><img src="https://scontent-atl1-1.xx.fbcdn.net/hphotos-xtf1/v/t1.0-9/10402402_671135862964999_7229663608499956765_n.jpg?oh=6bab57c9f0349af05e612e720306b3da&oe=5621DD0D"/></a></div>
+		<div class="widget t1"><a href="http://www.t1tequila.com/" target="_blank"><img src="https://pbs.twimg.com/profile_images/1934754276/T1Profile.jpg"/></a></div>
+		<div class="widget el-tesoro"><a href="http://www.eltesorotequila.com/" target="_blank"><img src="http://tressf.com/wp-content/uploads/2011/09/El-Tesoro-Logo.jpg"/></a></div>
+		<div class="widget villa-lobos"><a href="https://www.facebook.com/villalobostequila" target="_blank"><img src="https://pbs.twimg.com/profile_images/595660016784416768/FYL51BhX.jpg"/></a></div>
+	</div>
 </div>
 <!-- <div class="widget"><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> -->
 
