--- a/content/themes/flaty-5/partials/widget/about-me.hbs
+++ b/content/themes/flaty-5/partials/widget/about-me.hbs
@@ -1,5 +1,8 @@
 <div class="widget about-me">
 	<div class="widget-content">
+		<div class="lou-agave">
+		Lou Agave Presents:
+		</div>
 		<div class="flip-container">
 			<div class="flip clearfix">
 				<div class="front">
@@ -16,7 +19,7 @@
 		<div class="flip-data">
 			<div class="back">
 				<div class="bio">
-				<p>I'm a Tequila/Agave Connoisseur, Taster & Reviewer from Long Island, NY. I want to teach others what I know about ALL Agave spirits, keeping it simple and fun!
+				<p>I'm a Tequila/Agave Connoisseur, Taster & Reviewer from Long Island, NY. I want to teach others what I know about ALL Agave spirits, keeping it simple and fun! On Facebook, many know me by the name Lou Agave.
 				</p>
 				</div>
 
