--- a/content/themes/flaty-5/post.hbs
+++ b/content/themes/flaty-5/post.hbs
@@ -1,6 +1,18 @@
 {{!< default}}
 {{#post}}
 {{>misc/breadcrumb}}
+
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-38738531-2', 'auto');
+  ga('send', 'pageview');
+
+</script>
+
 <div id="fb-root"></div>
 <script>(function(d, s, id) {
   var js, fjs = d.getElementsByTagName(s)[0];
@@ -55,7 +67,7 @@
                                         {{#if bio}}
                                             {{bio}}
                                         {{else}}
-                                            I'm a Tequila/Agave Connoisseur, Taster & Reviewer from Long Island, NY. I want to teach others what I know about ALL Agave spirits, keeping it simple and fun!
+                                            I'm a Tequila/Agave Connoisseur, Taster & Reviewer from Long Island, NY. I want to teach others what I know about ALL Agave spirits, keeping it simple and fun! On Facebook, I am known as Lou Agave.
                                         {{/if}}
                                     </p>
                                 </div>
