pretty much ready to go live. search is hidden for now.

--- a/content/themes/flaty-5/partials/sidebar/default.hbs
+++ b/content/themes/flaty-5/partials/sidebar/default.hbs
@@ -2,7 +2,7 @@
 {{>widget/about-me}}
 {{>widget/facebook-like widget_title="Facebook" }}
 {{>widget/recent-tweets widget_title="Recent Tweets" twitter_user_url="https://twitter.com/loucaruso" twitter_widget_id="596485994402164737"}}
-{{>widget/instagram widget_title="Instagram Stream" user_name="longislandlou" api_token="518686459.9d1fadd.b2bb7107f2a745a78c991ddec9f0b161" api_clientid="9d1fadd22dc942e5a7c75f409fac0cc0" display="12" cols="3" show_follow_box="true"}}
+{{>widget/instagram widget_title="Instagram Stream" user_name="longislandloutequila" api_token="359702404.5c0f266.865290e8680c45909f9c5cc8fcd358a8" api_clientid="5c0f2666ff934d928a010d5aef4352dd" display="12" cols="3" show_follow_box="true"}}
 {{>widget/youtube widget_title="YouTube"}}
 <div class="all-ads">
 <!-- <h3 class="links">Links</h3> -->
