--- a/content/themes/flaty-5/assets/css/custom.css
+++ b/content/themes/flaty-5/assets/css/custom.css
@@ -60,6 +60,7 @@ li a:hover {
 a.navbar-brand.logo-img img {
 	max-width: 100%;
   	max-height: 100%;
+  	width: 100%;
 }
 
 /*.post-content .post-photo:nth-child(n+2) {
@@ -684,6 +685,7 @@ margin-right: auto;
 box-shadow: 3px 3px 3px #888;
 left: 6px;
 padding-bottom: 320px;
+max-height: 625px;
 }
 
 
@@ -732,9 +734,14 @@ div.widget.tn {
 	font-size:19.5px;
 }
 
+/*
+THIS IS THE SEARCH WIDGET - UNHIDE IT WHEN READY!
+*/
 div.widget.search-widget{
 	padding-right: 0;
 	padding-left: 0;
+	display: none;
+	
 }
 
 .nav>li {
@@ -775,6 +782,7 @@ section#intro.covered {
     left: 6px;
     /* padding-bottom: 190px; */
     max-width: 970px;
+    height: 525px;
 }
 
 #intro.covered{
@@ -852,6 +860,8 @@ background-size: cover;
 background-position: center bottom;
 left:0;
 padding: 130px;
+max-width: 756px;
+height: 410px;
 }
 
 .main-nav>li>a {
@@ -861,6 +871,11 @@ padding: 130px;
 
 .nav>li {
 	border-right: none;
+}
+
+#intro .intro-text h1 {
+    text-align: center;
+    font-size: 60px;
 }
 
 
@@ -961,6 +976,7 @@ height: 2rem;
 body[data-uppercase="true"] #intro .intro-text h1 {
 text-transform: capitalize;
 font-size: 52px;
+padding-top: 10rem;
 }
 
 body[data-uppercase="true"] .post-wrap .post .post-title {
@@ -1095,7 +1111,8 @@ background-image: url(/content/images/2015/08/bg-new.jpg);
 background-size: cover;
 background-position: center bottom;
 left:0;
-padding: 130px;
+padding: 0;
+height: 310px;
 }
 
 .main-nav>li>a {
@@ -1236,6 +1253,7 @@ div.col-md-8{
 body[data-uppercase="true"] #intro .intro-text h1 {
 text-transform: capitalize;
 font-size: 32px;
+padding-top: 6rem;
 }
 
 .page-info-section .share {
