--- a/content/themes/flaty-5/partials/widget/about-me.hbs
+++ b/content/themes/flaty-5/partials/widget/about-me.hbs
@@ -47,7 +47,7 @@
         					</a>
     					</li>
       					<li class="instagram">
-        					<a href="https://instagram.com/longislandlou/" target="_blank" title="Instagram">
+        					<a href="https://instagram.com/longislandloutequila/" target="_blank" title="Instagram">
             					<i class="fa fa-instagram"></i>
         					</a>
     					</li>
