--- a/content/themes/flaty-5/partials/sidebar/default.hbs
+++ b/content/themes/flaty-5/partials/sidebar/default.hbs
@@ -25,6 +25,18 @@
 		<div class="widget t1"><a href="http://www.t1tequila.com/" target="_blank"><img src="https://pbs.twimg.com/profile_images/1934754276/T1Profile.jpg"/></a></div>
 		<div class="widget el-tesoro"><a href="http://www.eltesorotequila.com/" target="_blank"><img src="http://tressf.com/wp-content/uploads/2011/09/El-Tesoro-Logo.jpg"/></a></div>
 		<div class="widget villa-lobos"><a href="https://www.facebook.com/villalobostequila" target="_blank"><img src="https://pbs.twimg.com/profile_images/595660016784416768/FYL51BhX.jpg"/></a></div>
+		<div class="google-ad">
+			<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+				<!-- DADS AD SIDEBAR -->
+				<ins class="adsbygoogle"
+	     		style="display:block"
+	     		data-ad-client="ca-pub-4468771716232038"
+	     		data-ad-slot="6055694701"
+	     		data-ad-format="auto"></ins>
+			<script>
+			(adsbygoogle = window.adsbygoogle || []).push({});
+			</script>
+		</div>
 	</div>
 </div>
 <!-- <div class="widget"><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> -->
