--- a/content/themes/flaty-5/partials/misc/social-icons.hbs
+++ b/content/themes/flaty-5/partials/misc/social-icons.hbs
@@ -27,6 +27,11 @@
             <i class="fa fa-pinterest"></i>
         </a>
     </li>
+    <li class="dailymotion">
+        <a href="http://www.dailymotion.com/long-island-lou-tequila?fbc=850" target="_blank" title="Daily Motion">
+            <img src="/assets/img/dm.jpg" class="dm">
+        </a>
+    </li>
 
   <!--   <li class="linkedin">
       <a href="#" target="_blank" title="Linkedin">
