--- a/content/themes/flaty-5/partials/sidebar/default.hbs
+++ b/content/themes/flaty-5/partials/sidebar/default.hbs
@@ -20,23 +20,15 @@
 	</div>
 	<div class="shrink-ads">
 		<div class="widget fortaleza"><a href="http://www.tequilafortaleza.com/" target="_blank"><img src="https://tequilasnob.files.wordpress.com/2010/06/fortaleza.gif"/></a></div>
-		<div class="widget casa-noble"><a href="http://www.casanoble.com/" target="_blank"><img src="https://libertylighthousegroup.files.wordpress.com/2013/09/casanoble-nyt-no1blanco.jpg"/></a></div>
+		<div class="widget one-with-life"><a href="http://www.onewithlifetequila.com/" target="_blank"><img src="https://scontent-ord1-1.xx.fbcdn.net/hphotos-xfl1/v/t1.0-9/11033079_1630139417271056_686810029404290743_n.png?oh=3bf42bbc35ded85c3ccc488d95dbe6e1&oe=573C217B"/></a></div>
 		<div class="widget g4"><a href="https://www.facebook.com/TequilaG4" target="_blank"><img src="https://scontent.xx.fbcdn.net/hphotos-ash2/v/t1.0-9/10402402_671135862964999_7229663608499956765_n.jpg?oh=45d81a7d5b71fd7a1c49aa4dc4fbde4c&oe=56C0110D"/></a></div>
 		<div class="widget t1"><a href="http://www.t1tequila.com/" target="_blank"><img src="https://pbs.twimg.com/profile_images/1934754276/T1Profile.jpg"/></a></div>
 		<div class="widget el-tesoro"><a href="http://www.eltesorotequila.com/" target="_blank"><img src="http://tressf.com/wp-content/uploads/2011/09/El-Tesoro-Logo.jpg"/></a></div>
 		<div class="widget villa-lobos"><a href="https://www.facebook.com/villalobostequila" target="_blank"><img src="https://pbs.twimg.com/profile_images/595660016784416768/FYL51BhX.jpg"/></a></div>
-		<div class="google-ad">
-			<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-				<!-- DADS AD SIDEBAR -->
-				<ins class="adsbygoogle"
-	     		style="display:block"
-	     		data-ad-client="ca-pub-4468771716232038"
-	     		data-ad-slot="6055694701"
-	     		data-ad-format="auto"></ins>
-			<script>
-			(adsbygoogle = window.adsbygoogle || []).push({});
-			</script>
-		</div>
+		<div class="widget casa-noble"><a href="http://www.casanoble.com/" target="_blank"><img src="https://libertylighthousegroup.files.wordpress.com/2013/09/casanoble-nyt-no1blanco.jpg"/></a></div>
+		<div class="widget t1"><a href="http://www.t1tequila.com/" target="_blank"><img src="https://pbs.twimg.com/profile_images/1934754276/T1Profile.jpg"/></a></div>
+		<div class="widget el-tesoro"><a href="http://www.eltesorotequila.com/" target="_blank"><img src=""/></a></div>
+		<div class="widget villa-lobos"><a href="https://www.facebook.com/villalobostequila" target="_blank"><img src=""/></a></div>
 	</div>
 </div>
 <!-- <div class="widget"><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> -->
