--- a/content/themes/flaty-5/assets/css/custom.css
+++ b/content/themes/flaty-5/assets/css/custom.css
@@ -474,6 +474,30 @@ margin-left: auto;
 margin-right: auto;
 }
 
+div.widget.alquimia img {
+    width:100%;
+}
+
+div.widget.alquimia {
+/*width: 80%;*/
+text-align: center;
+margin-left: auto;
+margin-right: auto;
+padding-left: 2px;
+padding-right: 2px;
+}
+
+div.widget.siembra {
+text-align: center;
+margin-left: auto;
+margin-right: auto;
+border-bottom: solid 1px;
+}
+
+div.widget.siembra img {
+	width: 100%;
+}
+
 div.widget.el-tesoro img {
     width:100%;
 }
