--- a/content/themes/flaty-5/partials/sidebar/default.hbs
+++ b/content/themes/flaty-5/partials/sidebar/default.hbs
@@ -7,11 +7,12 @@
 <div class="all-ads">
 <!-- <h3 class="links">Links</h3> -->
 	<div class="widget tn"><a href="http://www.tequila.net/" target="_blank"><img src="http://tequilaofthemonth.com/wp-content/uploads/2014/02/tequila-net-logo.png" class="alignnone" width="350" height="60" /></a></div>
-	<div class="widget tequila-match"><a href="http://www.tequilamatchmaker.com/" target="_blank"><img src="http://tequilamatchmaker.com/images/logo.png" class="alignnone"/></a></div>
-	<div class="widget mr-latino"><a href="http://www.mrlatinomagazine.com/nyc/" target="_blank"><img src="http://www.mrlatinomagazine.com/nyc/images/ML_headers/nyc_headimage.jpg"/></a></div>
+	<div class="widget alquimia"><a href="http://tequilaalquimia.com/" target="_blank"><img src="https://healthyspiritssf.com/wp-content/uploads/2015/01/tequilaalquimia.jpg"/></a></div>
+	<!-- <div class="widget tequila-match"><a href="http://www.tequilamatchmaker.com/" target="_blank"><img src="http://tequilamatchmaker.com/images/logo.png" class="alignnone"/></a></div> -->
+	<!-- <div class="widget mr-latino"><a href="http://www.mrlatinomagazine.com/nyc/" target="_blank"><img src="http://www.mrlatinomagazine.com/nyc/images/ML_headers/nyc_headimage.jpg"/></a></div> -->
 <!-- 
 <h3 class="ads">Advertisements</h3> -->
-	<div class="allbuy"><a href="http://www.zeetequila.com/" target="_blank">
+	<div class="allbuy"><a href="http://www.oldtowntequila.com" target="_blank">
 	
 		<h2 class="buy it here">Buy Tequila Here!</h2>
 {{!-- 		<h3 class="here">Here!</h3>   --}}
@@ -21,14 +22,13 @@
 	<div class="shrink-ads">
 		<div class="widget fortaleza"><a href="http://www.tequilafortaleza.com/" target="_blank"><img src="https://tequilasnob.files.wordpress.com/2010/06/fortaleza.gif"/></a></div>
 		<div class="widget one-with-life"><a href="http://www.onewithlifetequila.com/" target="_blank"><img src="https://scontent-ord1-1.xx.fbcdn.net/hphotos-xfl1/v/t1.0-9/11033079_1630139417271056_686810029404290743_n.png?oh=3bf42bbc35ded85c3ccc488d95dbe6e1&oe=573C217B"/></a></div>
-		<div class="widget g4"><a href="https://www.facebook.com/TequilaG4" target="_blank"><img src="https://scontent.xx.fbcdn.net/hphotos-ash2/v/t1.0-9/10402402_671135862964999_7229663608499956765_n.jpg?oh=45d81a7d5b71fd7a1c49aa4dc4fbde4c&oe=56C0110D"/></a></div>
+		<div class="widget g4"><a href="https://www.facebook.com/TequilaG4" target="_blank"><img src="https://scontent.xx.fbcdn.net/hphotos-xpa1/v/t1.0-9/75538_939299059482010_2680552069599847955_n.jpg?oh=90fa2a4b4057c6db1ca4fa9fb9d4b950&oe=57BE2CB1"/></a></div>
 		<div class="widget t1"><a href="http://www.t1tequila.com/" target="_blank"><img src="https://pbs.twimg.com/profile_images/1934754276/T1Profile.jpg"/></a></div>
 		<div class="widget el-tesoro"><a href="http://www.eltesorotequila.com/" target="_blank"><img src="http://tressf.com/wp-content/uploads/2011/09/El-Tesoro-Logo.jpg"/></a></div>
 		<div class="widget villa-lobos"><a href="https://www.facebook.com/villalobostequila" target="_blank"><img src="https://pbs.twimg.com/profile_images/595660016784416768/FYL51BhX.jpg"/></a></div>
 		<div class="widget casa-noble"><a href="http://www.casanoble.com/" target="_blank"><img src="https://libertylighthousegroup.files.wordpress.com/2013/09/casanoble-nyt-no1blanco.jpg"/></a></div>
-		<div class="widget t1"><a href="http://www.t1tequila.com/" target="_blank"><img src="https://pbs.twimg.com/profile_images/1934754276/T1Profile.jpg"/></a></div>
-		<div class="widget el-tesoro"><a href="http://www.eltesorotequila.com/" target="_blank"><img src=""/></a></div>
-		<div class="widget villa-lobos"><a href="https://www.facebook.com/villalobostequila" target="_blank"><img src=""/></a></div>
+		<div class="widget siembra"><a href="http://www.siembraspirits.com/" target="_blank"><img src="https://scontent.xx.fbcdn.net/hphotos-xft1/t31.0-8/s2048x2048/11038139_10152878595588208_4917288486464076605_o.jpg"/></a></div>
+		<div class="widget ocho"><a href="http://ochotequila.com" target="_blank"><img src="http://ochotequila.com/us/wp-content/uploads/sites/5/2014/04/Tequila-Ocho-Logo-US.png"/></a></div>
 	</div>
 </div>
 <!-- <div class="widget"><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> -->
