--- a/content/themes/flaty-5/partials/sidebar/default.hbs
+++ b/content/themes/flaty-5/partials/sidebar/default.hbs
@@ -2,13 +2,15 @@
 {{>widget/about-me}}
 {{>widget/facebook-like widget_title="Facebook" }}
 {{>widget/recent-tweets widget_title="Recent Tweets" twitter_user_url="https://twitter.com/loucaruso" twitter_widget_id="596485994402164737"}}
-{{>widget/instagram widget_title="Instagram Stream" user_name="longislandloutequila" api_token="359702404.672b3b4.01af9c06695f46afbab56cb351af9381" api_clientid="672b3b4f3431449bacab9768d061cca1" display="12" cols="3" show_follow_box="true"}}
+<!--{{>widget/instagram widget_title="Instagram Stream" user_name="longislandloutequila" api_token="359702404.5c0f266.865290e8680c45909f9c5cc8fcd358a8" api_clientid="5c0f2666ff934d928a010d5aef4352dd" display="12" cols="3" show_follow_box="true"}} -->
+<!-- LightWidget WIDGET --><h3 class="widget-title">INSTAGRAM</h3><script src="//lightwidget.com/widgets/lightwidget.js"></script><iframe src="//lightwidget.com/widgets/e29db02151b650e98f9d993b3f0fb80d.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width: 100%; border: 0; overflow: hidden;"></iframe>
 {{>widget/youtube widget_title="YouTube"}}
 <div class="all-ads">
 <!-- <h3 class="links">Links</h3> -->
 	<!--<div class="widget tn"><a href="http://www.tequila.net/" target="_blank"><img src="http://tequilaofthemonth.com/wp-content/uploads/2014/02/tequila-net-logo.png" class="alignnone" width="350" height="60" /></a></div> -->
-	<div class="widget one-with-life"><a href="http://www.onewithlifetequila.com/" target="_blank"><img src="/assets/img/owl-tequila.jpg"/></a></div>
-	<div class="widget alquimia"><a href="http://tequilaalquimia.com/" target="_blank"><img src="https://healthyspiritssf.com/wp-content/uploads/2015/01/tequilaalquimia.jpg"/></a></div>
+	<!-- <div class="widget one-with-life"><a href="http://www.onewithlifetequila.com/" target="_blank"><img src="/assets/img/owl-tequila.jpg"/></a></div> -->
+    <div class="widget gran"><a href="https://www.tequilagrandovejo.com/" target="_blank"><img src="/assets/img/gran2.jpg"/></a></div>
+	<div class="widget alquimia"><a href="http://tequilaalquimia.com/" target="_blank"><img src="/assets/img/alquimia.jpg"/></a></div>
 	<!-- <div class="widget tequila-match"><a href="http://www.tequilamatchmaker.com/" target="_blank"><img src="http://tequilamatchmaker.com/images/logo.png" class="alignnone"/></a></div> -->
 	<!-- <div class="widget mr-latino"><a href="http://www.mrlatinomagazine.com/nyc/" target="_blank"><img src="http://www.mrlatinomagazine.com/nyc/images/ML_headers/nyc_headimage.jpg"/></a></div> -->
 <!-- 
@@ -22,22 +24,26 @@
 	</div>
 	<div class="shrink-ads">
 		<div class="widget fortaleza"><a href="http://www.tequilafortaleza.com/" target="_blank"><img src="https://tequilasnob.files.wordpress.com/2010/06/fortaleza.gif"/></a></div>
-		<div class="widget g4"><a href="https://www.facebook.com/TequilaG4" target="_blank"><img src="/assets/img/g4-logo.jpg"/></a></div>
-		<div class="widget t1"><a href="http://www.t1tequila.com/" target="_blank"><img src="/assets/img/t1.png"/></a></div>
+		<div class="widget g4"><a href="http://g4tequila.life/" target="_blank"><img src="/assets/img/g4-new.jpg"/></a></div>
+		<div class="widget t1"><a href="https://www.facebook.com/t1tequila/" target="_blank"><img src="/assets/img/t1-new2.png"/></a></div>
 		<div class="widget calle23"><a href="http://www.tequilacalle23.com/" target="_blank"><img src="/assets/img/calle23-agave.jpg"/></a></div>
 		<div class="widget grand-mayan"><a href="http://www.gmtequila.com/site/" target="_blank"><img src="/assets/img/grand-mayan.png"/></a></div>
 		<!--<div class="widget villa-lobos"><a href="https://www.facebook.com/villalobostequila" target="_blank"><img src="https://pbs.twimg.com/profile_images/595660016784416768/FYL51BhX.jpg"/></a></div>-->
-		<div class="widget oro-de-lidia"><a href="http://www.tequilaorodelidia.com/" target="_blank"><img src="/assets/img/oro-de-lidia-bottles.jpg"/></a></div>
+		<!-- <div class="widget oro-de-lidia"><a href="http://www.tequilaorodelidia.com/" target="_blank"><img src="/assets/img/oro-de-lidia-bottles.jpg"/></a></div>-->
+        <div class="widget uno"><a href="http://unoporfavor.com/" target="_blank"><img src="/assets/img/uno.jpg"/></a></div>
 		<div class="widget terralta"><a href="http://www.creospirits.com/" target="_blank"><img src="/assets/img/terralta.png"/></a></div>
 		<div class="widget san-matias"><a href="http://sanmatias.com/us/disclaimer.php" target="_blank"><img src="/assets/img/san-matias.jpg"/></a></div>
 		<!--<div class="widget casa-noble"><a href="http://www.casanoble.com/" target="_blank"><img src="https://libertylighthousegroup.files.wordpress.com/2013/09/casanoble-nyt-no1blanco.jpg"/></a></div>-->
 		<!--<div class="widget siembra"><a href="http://www.siembraspirits.com/" target="_blank"><img src="https://scontent.xx.fbcdn.net/hphotos-xft1/t31.0-8/s2048x2048/11038139_10152878595588208_4917288486464076605_o.jpg"/></a></div>-->
 		<!--<div class="widget ocho"><a href="http://ochotequila.com" target="_blank"><img src="http://ochotequila.com/us/wp-content/uploads/sites/5/2014/04/Tequila-Ocho-Logo-US.png"/></a></div>-->
-		<div class="widget des-madre"><a href="http://www.desmadretequila.com/" target="_blank"><img src="/assets/img/desmadre2.jpg"/></a></div>
+		<!-- <div class="widget des-madre"><a href="http://www.desmadretequila.com/" target="_blank"><img src="/assets/img/desmadre2.jpg"/></a></div>-->
 		<!--<div class="widget el-tesoro"><a href="http://www.eltesorotequila.com/" target="_blank"><img src="http://tressf.com/wp-content/uploads/2011/09/El-Tesoro-Logo.jpg"/></a></div>-->
+		<div class="widget ocho"><a href="http://www.altamarbrands.com" target="_blank"><img src="/assets/img/ocho.jpg"/></a></div>
+		<div class="widget don-alberto"><a href="http://donalberto.mx/" target="_blank"><img src="/assets/img/don-alberto2.png"/></a></div>
 		<div class="widget arette"><a href="https://www.facebook.com/Arette.Tequila/" target="_blank"><img src="/assets/img/arette3.png"/></a></div>
-		<div class="widget suerte"><a href="http://drinksuerte.com/" target="_blank"><img src="/assets/img/suerte-logo.jpg"/></a></div>
-		<div class="widget matchmaker"><a href="http://tequilamatchmaker.com/" target="_blank"><img src="/assets/img/tequila-matchmaker.jpg"/></a></div>
+		<div class="widget maracame"><a href="http://maracametequila.com/" target="_blank"><img src="/assets/img/moracame.png"/></a></div>
+		<!--<div class="widget suerte"><a href="http://drinksuerte.com/" target="_blank"><img src="/assets/img/suerte-logo.jpg"/></a></div>-->
+		<!--<div class="widget matchmaker"><a href="http://tequilamatchmaker.com/" target="_blank"><img src="/assets/img/tequila-matchmaker.jpg"/></a></div>-->
 	</div>
 </div>
 <!-- <div class="widget"><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> -->
